kylegrover.comify-ing things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,18 @@
-<footer class="site-footer h-card">
+<footer class="footer" role="contentinfo" id="site_footer">
+
+  <div id="inner-footer" class="wrap cf">
+
+    <nav role="navigation">
+      
+    </nav>
+
+    <p class="source-org copyright">&copy; {{ date('year')}} Kyle Grover | Developed, designed, and hosted by Kyle Grover using Jekyll, Forestry, and GitHub.</p>
+
+  </div>
+
+</footer>
+
+<!-- <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
@@ -31,4 +45,4 @@
 
   </div>
 
-</footer>
+</footer> -->
