--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,31 @@
-<header class="site-header">
-
-  <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-
-    {%- if titles_size > 0 -%}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
-
-        <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
-        </div>
-      </nav>
-    {%- endif -%}
+<header class="header" role="banner" id="site_header">
+  <div id="floating_cubes" class="absolute-fill">
+    <div id="inner-header" class="wrap cf absolute-fill">
+      <p id="logo" class="h1"><a href="<?php echo home_url(); ?>" rel="nofollow">kyle grover</a> <a class="header-link" href="/contact/">contact&nbsp;&nbsp;<i class="fas fa-comments"></i></a> <a class="header-link" href="/resume/">resume&nbsp;&nbsp;<i class="fas fa-file-alt"></i></a></p>
+    </div>
   </div>
 </header>
+<section id="content_filters">
+    <div class="content_filters-cats wrap">
+        <a href="https://kylegrover.com/art/" 
+           data-cat="art" 
+                   ><i class="fas fa-caret-right"></i>&nbsp;&nbsp;Art <i class="fas fa-paint-brush"></i></a>
+        <a href="https://kylegrover.com/web-work/" 
+           data-cat="work" 
+                   ><i class="fas fa-caret-right"></i>&nbsp;&nbsp;Work <i class="fas fa-briefcase"></i></a>
+        <a href="https://kylegrover.com/links/" 
+           data-cat="links" 
+                   ><i class="fas fa-caret-right"></i> &nbsp;&nbsp;Links <i class="fas fa-globe"></i></a>
+    </div>
+    <div class="content_filters-tags wrap">
+        <div data-cat="art">
+            
+        </div>
+        <div data-cat="work">
+            
+        </div>
+        <div data-cat="links">
+            
+        </div>
+    </div>
+</section>
