--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,15 @@
-<header class="header" role="banner" id="site_header">
-  <div id="floating_cubes" class="absolute-fill">
-    <div id="inner-header" class="wrap cf absolute-fill">
-      <p id="logo" class="h1"><a href="<?php echo home_url(); ?>" rel="nofollow">kyle grover</a> <a class="header-link" href="/contact/">contact&nbsp;&nbsp;<i class="fas fa-comments"></i></a> <a class="header-link" href="/resume/">resume&nbsp;&nbsp;<i class="fas fa-file-alt"></i></a></p>
-    </div>
-  </div>
+<header class="wrapper">
+  <span class="my-name"><a href="/">Kyle Grover</a>'s</span>
+  <a href="/services/" data-cat="work">
+    <i class="fas fa-caret-right"></i>&nbsp;&nbsp;Services <i class="fas fa-briefcase"></i>
+  </a>
+  <a href="/client-work/" data-cat="work">
+    <i class="fas fa-caret-right"></i>&nbsp;&nbsp;Client Work <i class="fas fa-briefcase"></i>
+  </a>
+  <a href="/projects/" data-cat="work">
+    <i class="fas fa-caret-right"></i>&nbsp;&nbsp;Projects <i class="fas fa-briefcase"></i>
+  </a>
+  <a href="/contact/" data-cat="links">
+    <i class="fas fa-caret-right"></i> &nbsp;&nbsp;Bio & Contact <i class="fas fa-globe"></i>
+  </a>
 </header>
-<section id="content_filters">
-    <div class="content_filters-cats wrap">
-        <a href="https://kylegrover.com/art/" 
-           data-cat="art" 
-                   ><i class="fas fa-caret-right"></i>&nbsp;&nbsp;Art <i class="fas fa-paint-brush"></i></a>
-        <a href="https://kylegrover.com/web-work/" 
-           data-cat="work" 
-                   ><i class="fas fa-caret-right"></i>&nbsp;&nbsp;Work <i class="fas fa-briefcase"></i></a>
-        <a href="https://kylegrover.com/links/" 
-           data-cat="links" 
-                   ><i class="fas fa-caret-right"></i> &nbsp;&nbsp;Links <i class="fas fa-globe"></i></a>
-    </div>
-    <div class="content_filters-tags wrap">
-        <div data-cat="art">
-            
-        </div>
-        <div data-cat="work">
-            
-        </div>
-        <div data-cat="links">
-            
-        </div>
-    </div>
-</section>
