--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,48 +1,13 @@
-<footer class="footer" role="contentinfo" id="site_footer">
-
-  <div id="inner-footer" class="wrap cf">
-
+<footer class="footer wrapper" id="site_footer">
+  <div id="inner-footer" class="wrap">
     <nav role="navigation">
-      
-    </nav>
-
-    <p class="source-org copyright">&copy; {{ date('year')}} Kyle Grover | Developed, designed, and hosted by Kyle Grover using Jekyll, Forestry, and GitHub.</p>
-
-  </div>
-
-</footer>
-
-<!-- <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col one-half">
-      <h2 class="footer-heading">{{ site.title | escape }}</h2>
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
-        </ul>
-      </div>
-
-      <div class="footer-col one-half">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-
       <div class="social-links">
         {%- include social.html -%}
       </div>
-    </div>
+    </nav>
 
+    <p class="source-org copyright">
+      &copy; {{ site.time | date: "%Y" }} {{ site.title }} | {{ site.footer_copyright_text }} | <a href="/about-this-site/">About this site</a></a></p>
   </div>
-
-</footer> -->
+</footer>
+{%- include barbajs.html -%}
