--- a/_layouts/client-work.html
+++ b/_layouts/client-work.html
@@ -1,27 +1,26 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.jekyle.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
-      {%- endif -%}</p>
-  </header>
-
-  <div class="post-content e-content" itemprop="articleBody">
-    {{ content }}
-  </div>
-
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
+<div class="client-work">
+  {%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-</article>
+  {{ content }}
+  {{ site.client_work.size }}
+  {%- if site.client_work.size > 0 -%}
+    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <ul class="post-list">
+      {%- for client_work in site.client_work -%}
+      <li>
+        <h3>
+          <a class="post-link" href="{{ client_work.url | relative_url }}">
+            {{ client_work.title | escape }}
+          </a>
+        </h3>
+        <p>{{ client_work.content }}</p>
+      </li>
+      {%- endfor -%}
+    </ul>
+  {%- endif -%}
+</div>
