--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
 
     {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
+    <main class="page-content" aria-label="Content" id="barba-wrapper">
+      <div class="wrapper barba-container">
+          {{ content }}
       </div>
     </main>
 
