--- a/_sass/jekyle/_layout.scss
+++ b/_sass/jekyle/_layout.scss
@@ -141,7 +141,6 @@
   @include relative-font-size(0.9375);
   color: $grey-color;
   margin-left: -$spacing-unit / 2;
-  @extend %clearfix;
 }
 
 .footer-col {
@@ -193,6 +192,11 @@
 .page-content {
   padding: $spacing-unit 0;
   flex: 1 0 auto;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .page-heading {
