sub page gloss added jquery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,5 @@
       &copy; {{ site.time | date: "%Y" }} {{ site.title }} | {{ site.footer_copyright_text }} | <a href="/about-this-site/">About this site</a></a></p>
   </div>
 </footer>
+<script src="/assets/js/jquery-3.3.1.js"></script>
 {%- include barbajs.html -%}
