--- a/_layouts/client-work.html
+++ b/_layouts/client-work.html
@@ -7,7 +7,7 @@ layout: default
   {%- endif -%}
 
   {{ content }}
-  {{ site.client_work.size }}
+  {{ site.client_work }}
   {%- if site.client_work.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
