--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -243,3 +243,50 @@ div.home {
 header {
   padding: 10px 30px;
 }
+
+.contact-form.floating-labels {
+  .form-field-row {
+    display: flex;
+  }
+  .form-field {
+     position: relative;
+     margin: 32px 0;
+     flex: 1;
+  }
+  .input-text {
+     display: block;
+     width: 100%;
+     height: 36px;
+     border-width: 0 0 2px 0;
+     border-color: #000;
+     
+     &:focus {
+        outline: none;
+     }
+     
+     &:focus,
+     &.not-empty {
+        + label {
+           transform: translateY(-24px);
+        }
+     }
+  }
+  label {
+     position: absolute;
+     left: 20px;
+     bottom: 11px;
+     color: #888;
+     cursor: text;
+     transition: transform .2s ease-in-out;
+  }
+  
+  .submit-btn {
+     display: inline-block;
+     background-color: #000;
+     text-transform: uppercase;
+     letter-spacing: 2px;
+     padding: 8px 16px;
+     border: none;
+     cursor: pointer;
+  }
+}
