--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,7 @@
 <header class="wrapper">
   <span class="my-name"><a href="/">Kyle Grover</a>'s</span>
-  <a href="/services/" data-cat="work">
-    <i class="fas fa-caret-right"></i>&nbsp;&nbsp;Services <i class="fas fa-briefcase"></i>
-  </a>
-  <a href="/client-work/" data-cat="work">
-    <i class="fas fa-caret-right"></i>&nbsp;&nbsp;Client Work <i class="fas fa-briefcase"></i>
-  </a>
-  <a href="/projects/" data-cat="work">
-    <i class="fas fa-caret-right"></i>&nbsp;&nbsp;Projects <i class="fas fa-briefcase"></i>
-  </a>
-  <a href="/contact/" data-cat="links">
-    <i class="fas fa-caret-right"></i> &nbsp;&nbsp;Bio & Contact <i class="fas fa-globe"></i>
-  </a>
+  <a href="/services/" data-cat="work">Services</a>
+  <a href="/client-work/" data-cat="work">Client Work</a>
+  <a href="/projects/" data-cat="work">Projects</a>
+  <a href="/contact/" data-cat="links">Bio & Contact</a>
 </header>
