--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,3 @@
 <header class="wrapper">
-  <span class="my-name"><a href="/">Kyle Grover</a>'s</span>
-  <a href="/services/" data-cat="work">Services</a>
-  <a href="/client-work/" data-cat="work">Client Work</a>
-  <a href="/projects/" data-cat="work">Projects</a>
-  <a href="/contact/" data-cat="links">Bio & Contact</a>
+  {% include mainnav.html %}
 </header>
