--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -321,6 +321,7 @@ footer {
   }
   .main-nav {
     display: none;
+    font-size: 1em;
   }
   .copyright {
     text-align: center;
@@ -331,4 +332,16 @@ footer {
       letter-spacing: 0;
     }
   }
+}
+
+.myface {
+  margin: 0 auto;
+  min-width: 200px;
+  width: 200px;
+  display: block;
+}
+@media (min-width: 600px) {
+  float: left;
+  padding: 0 20px 20px 0;
+  width: 30%;
 }
