--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -334,14 +334,20 @@ footer {
   }
 }
 
-.myface {
-  margin: 0 auto;
-  min-width: 200px;
-  width: 200px;
-  display: block;
-}
-@media (min-width: 600px) {
-  float: left;
-  padding: 0 20px 20px 0;
-  width: 30%;
+.page-bio-contact {
+  .myface {
+    margin: 0 auto;
+    min-width: 200px;
+    width: 200px;
+    display: block;
+    @media (min-width: 600px) {
+      float: left;
+      padding: 0 20px 20px 0;
+      width: 30%;
+    }
+  }
+  #lets-chat {
+    clear: left;
+    text-align: center;
+  }
 }
