--- a/_includes/mainnav.html
+++ b/_includes/mainnav.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
-    <span class="my-name"><a href="/">Kyle Grover</a>'s</span>
-    <a href="/services/" data-cat="work">Services</a>
-    <a href="/client-work/" data-cat="work">Client Work</a>
-    <a href="/projects/" data-cat="work">Projects</a>
-    <a href="/contact/" data-cat="links">Bio & Contact</a>
+    <a href="/">Home</a>
+    <a href="/services/">Services</a>
+    <a href="/client-work/">Client Work</a>
+    <a href="/projects/">Projects</a>
+    <a href="/contact/">Bio & Contact</a>
 </nav>
