--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -313,6 +313,10 @@ header {
   @media (max-width: 767px) {
     padding: 5px!important;
   }
+  .main-nav {
+    transition: 0.5s ease opacity;
+    opacity: 1;
+  }
 }
 
 footer {
@@ -337,13 +341,11 @@ footer {
 .page-bio-contact {
   .myface {
     margin: 0 auto;
-    min-width: 200px;
-    width: 200px;
+    width: 250px;
     display: block;
     @media (min-width: 600px) {
       float: left;
       padding: 0 20px 20px 0;
-      width: 30%;
     }
   }
   #lets-chat {
