--- a/_includes/mainnav.html
+++ b/_includes/mainnav.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
     <a href="/">Home</a>
-    <a href="/services/">Services</a>
-    <a href="/client-work/">Client Work</a>
-    <a href="/projects/">Projects</a>
-    <a href="/contact/">Bio & Contact</a>
+    <a href="/services">Services</a>
+    <a href="/client-work">Client Work</a>
+    <a href="/projects">Projects</a>
+    <a href="/contact">Bio & Contact</a>
 </nav>
