--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@ $('header .main-nav a').click(function(){
   anime.timeline({loop: false})
   .add({
       targets: this.children,
-      translateY: ['-1px', '1px', 0],
+      translateY: ['-1px', '2px','-1px', 0],
       translateZ: 0,
       duration: 600,
       easing: 'linear',
