--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,14 @@
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <!-- way too many fonts so i can switch between them and find my favorite -->
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900" rel="stylesheet">
   <!--  page transition js, maybe localize? -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js" type="text/javascript"></script>
+  
+  <script src="{{ "/assets/fontawesome/light.min.js" | relative_url }}" type="text/javascript"></script>
+  <script src="{{ "/assets/fontawesome/brands.min.js" | relative_url }}" type="text/javascript"></script>
+  <script src="{{ "/assets/fontawesome/fontawesome.min.js" | relative_url }}" type="text/javascript"></script>
+  
 
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
