--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -353,3 +353,54 @@ footer {
     text-align: center;
   }
 }
+
+.fadein {
+  -webkit-animation: fadein 0.2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 0.2s; /* Firefox < 16 */
+      -ms-animation: fadein 0.2s; /* Internet Explorer */
+       -o-animation: fadein 0.2s; /* Opera < 12.1 */
+          animation: fadein 0.2s;
+  &.fadein-1 {
+    animation-delay: 0.1s;
+  }
+  &.fadein-2 {
+    animation-delay: 0.2s;
+  }
+  &.fadein-3 {
+    animation-delay: 0.3s;
+  }
+  &.fadein-4 {
+    animation-delay: 0.4s;
+  }
+  &.fadein-5 {
+    animation-delay: 0.5s;
+  }
+  &.fadein-6 {
+    animation-delay: 0.6s;
+  }
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
