--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
   {%- if page.title -%}
     <h1 class="page-heading">
       {% if page.dir != '/' %}
-        <a href="{{page.dir}}">{{ page.dir | remove: "/" | capitalize }}</a> >
+        <a href="{{page.dir | remove: '/' }}">{{ page.dir | remove: "/" | capitalize }}</a> >
       {% endif %}
       {{ page.title }}
     </h1>
