--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -355,6 +355,7 @@ footer {
 }
 
 .fadein {
+  opacity: 0;
   -webkit-animation: fadein 0.2s; /* Safari, Chrome and Opera > 12.1 */
      -moz-animation: fadein 0.2s; /* Firefox < 16 */
       -ms-animation: fadein 0.2s; /* Internet Explorer */
