--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -355,11 +355,9 @@ footer {
 }
 
 .fadein {
-  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
-     -moz-animation: fadein 0.5s; /* Firefox < 16 */
-      -ms-animation: fadein 0.5s; /* Internet Explorer */
-       -o-animation: fadein 0.5s; /* Opera < 12.1 */
-          animation: fadein 0.5s;
+  opacity: 0;
+  animation: fadein 0.4s;
+  animation-fill-mode: forwards;
   &.fadein-1 {
     animation-delay: 0.1s;
   }
