--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,12 +14,11 @@
 <script>
 function page_load_scripts() {
   document.querySelector('footer .main-nav').style.display = 'none';
-  if (window.innerHeight < window.document.body.offsetHeight) {
-    console.log('this page is long');
+  if (window.innerHeight < window.document.body.offsetHeight) 
     document.querySelector('footer .main-nav').style.display = 'block';
-  }
 
-  if (document.querySelector('h1#kyle-grover')) console.log('homepage');
+  if (document.querySelector('h1#kyle-grovers')) 
+    document.querySelector('footer .main-nav').style.display = 'none';
 }
 page_load_scripts();
 </script>
