--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -264,7 +264,8 @@ div.home {
   }
   .form-field {
      position: relative;
-     margin: 32px 0;
+     margin-top: 32px;
+     margin-bottom: 32px;
      flex: 1;
   }
   .input-text {
@@ -358,47 +359,99 @@ footer {
   opacity: 0;
   animation: fadein 0.4s;
   animation-fill-mode: forwards;
-  &.fadein-1 {
-    animation-delay: 0.1s;
-  }
-  &.fadein-2 {
-    animation-delay: 0.2s;
-  }
-  &.fadein-3 {
-    animation-delay: 0.3s;
-  }
-  &.fadein-4 {
-    animation-delay: 0.4s;
-  }
-  &.fadein-5 {
-    animation-delay: 0.5s;
-  }
-  &.fadein-6 {
-    animation-delay: 0.6s;
-  }
+  &.delay-1 {animation-delay: 0.1s;}
+  &.delay-2 {animation-delay: 0.2s;}
+  &.delay-3 {animation-delay: 0.3s;}
+  &.delay-4 {animation-delay: 0.4s;}
+  &.delay-5 {animation-delay: 0.5s;}
+  &.delay-6 {animation-delay: 0.6s;}
+  &.delay-7 {animation-delay: 0.7s;}
+  &.delay-8 {animation-delay: 0.8s;}
+  &.delay-9 {animation-delay: 0.9s;}
+  &.delay-10{animation-delay: 1.0s;}
 }
 
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
 }
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+
+.slidein-left {
+  transform: translate3d(-40px, 0, 0);
+  animation: slideinleft 0.4s;
+  &.delay-1 {animation-delay: 0.1s;}
+  &.delay-2 {animation-delay: 0.2s;}
+  &.delay-3 {animation-delay: 0.3s;}
+  &.delay-4 {animation-delay: 0.4s;}
+  &.delay-5 {animation-delay: 0.5s;}
+  &.delay-6 {animation-delay: 0.6s;}
+  &.delay-7 {animation-delay: 0.7s;}
+  &.delay-8 {animation-delay: 0.8s;}
+  &.delay-9 {animation-delay: 0.9s;}
+  &.delay-10{animation-delay: 1.0s;}
 }
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+
+@keyframes slideinleft {
+  from { transform: translate3d(-40px, 0, 0); }
+  to { transform: translate3d(0, 0, 0); }
 }
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+
+.slidein-right {
+  transform: translate3d(-40px, 0, 0);
+  animation: slideinleft 0.4s;
+  &.delay-1 {animation-delay: 0.1s;}
+  &.delay-2 {animation-delay: 0.2s;}
+  &.delay-3 {animation-delay: 0.3s;}
+  &.delay-4 {animation-delay: 0.4s;}
+  &.delay-5 {animation-delay: 0.5s;}
+  &.delay-6 {animation-delay: 0.6s;}
+  &.delay-7 {animation-delay: 0.7s;}
+  &.delay-8 {animation-delay: 0.8s;}
+  &.delay-9 {animation-delay: 0.9s;}
+  &.delay-10{animation-delay: 1.0s;}
 }
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+
+@keyframes slideinright {
+  from { transform: translate3d(40px, 0, 0); }
+  to { transform: translate3d(0, 0, 0); }
+}
+
+.slidein-up {
+  transform: translate3d(-40px, 0, 0);
+  animation: slideinleft 0.4s;
+  &.delay-1 {animation-delay: 0.1s;}
+  &.delay-2 {animation-delay: 0.2s;}
+  &.delay-3 {animation-delay: 0.3s;}
+  &.delay-4 {animation-delay: 0.4s;}
+  &.delay-5 {animation-delay: 0.5s;}
+  &.delay-6 {animation-delay: 0.6s;}
+  &.delay-7 {animation-delay: 0.7s;}
+  &.delay-8 {animation-delay: 0.8s;}
+  &.delay-9 {animation-delay: 0.9s;}
+  &.delay-10{animation-delay: 1.0s;}
+}
+
+@keyframes slideinup {
+  from { transform: translate3d(0, -40px, 0); }
+  to { transform: translate3d(0, 0, 0); }
+}
+
+.slidein-down {
+  transform: translate3d(-40px, 0, 0);
+  animation: slideinleft 0.4s;
+  &.delay-1 {animation-delay: 0.1s;}
+  &.delay-2 {animation-delay: 0.2s;}
+  &.delay-3 {animation-delay: 0.3s;}
+  &.delay-4 {animation-delay: 0.4s;}
+  &.delay-5 {animation-delay: 0.5s;}
+  &.delay-6 {animation-delay: 0.6s;}
+  &.delay-7 {animation-delay: 0.7s;}
+  &.delay-8 {animation-delay: 0.8s;}
+  &.delay-9 {animation-delay: 0.9s;}
+  &.delay-10{animation-delay: 1.0s;}
+}
+
+@keyframes slideindown {
+  from { transform: translate3d(0, 40px, 0); }
+  to { transform: translate3d(0, 0, 0); }
 }
