--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,9 @@
   <script src="{{ "/assets/fontawesome/light.min.js" | relative_url }}" type="text/javascript"></script>
   <script src="{{ "/assets/fontawesome/brands.min.js" | relative_url }}" type="text/javascript"></script>
   <script src="{{ "/assets/fontawesome/fontawesome.min.js" | relative_url }}" type="text/javascript"></script>
+
+  <script src="{{ "/assets/vantajs/three.r92.min.js" | relative_url }}" type="text/javascript"></script>
+  <script src="{{ "/assets/vantajs/vanta.fog.min.js" | relative_url }}" type="text/javascript"></script>
   
 
   {%- seo -%}
