--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,3 +60,17 @@ $('header .main-nav a').click(function(){
 /* custom configuration goes here (www.olark.com/documentation) */
 olark.identify('7471-379-10-1115');</script>
 <!-- end olark code -->
+<script src="{{ "/assets/vantajs/three.r92.min.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/vantajs/vanta.fog.min.js" | relative_url }}" type="text/javascript"></script>
+<script>
+VANTA.FOG({
+  el: "body",
+  highlightColor: 0x7d1c1c,
+  midtoneColor: 0x2b6e33,
+  lowlightColor: 0x57499b,
+  baseColor: 0x1e1e1e,
+  blurFactor: 0.43,
+  speed: 0.60,
+  zoom: 1.40
+})
+</script>
