--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,10 +65,10 @@ olark.identify('7471-379-10-1115');</script>
 <script>
 VANTA.FOG({
   el: "body",
-  highlightColor: 0x7d1c1c,
-  midtoneColor: 0x2b6e33,
-  lowlightColor: 0x57499b,
-  baseColor: 0x1e1e1e,
+  highlightColor: 0xfdeedf,
+  midtoneColor: 0xfedcba,
+  lowlightColor: 0xabcdba,
+  baseColor: 0xfdfdfd,
   blurFactor: 0.43,
   speed: 0.60,
   zoom: 1.40
