--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,12 +65,11 @@ olark.identify('7471-379-10-1115');</script>
 <script>
 VANTA.FOG({
   el: "body",
-  highlightColor: 0xfdeedf,
-  midtoneColor: 0xfedcba,
-  lowlightColor: 0xabcdba,
-  baseColor: 0xfdfdfd,
-  blurFactor: 0.43,
-  speed: 0.60,
-  zoom: 1.40
-})
+  highlightColor: 0xffdcaa,
+  midtoneColor: 0xc98cff,
+  lowlightColor: 0xe61075,
+  baseColor: 0xffffff,
+  blurFactor: 0.62,
+  zoom: 1.10
+});
 </script>
