--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,11 +65,12 @@ olark.identify('7471-379-10-1115');</script>
 <script>
 VANTA.FOG({
   el: "body",
-  highlightColor: 0xffdcaa,
-  midtoneColor: 0xc98cff,
-  lowlightColor: 0xe61075,
+  highlightColor: 0xffffff,
+  midtoneColor: 0xdccbde,
+  lowlightColor: 0x595959,
   baseColor: 0xffffff,
-  blurFactor: 0.62,
-  zoom: 1.10
+  blurFactor: 0.49,
+  speed: 0.90,
+  zoom: 1.40
 });
 </script>
