--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,11 +66,11 @@ olark.identify('7471-379-10-1115');</script>
 VANTA.FOG({
   el: "body",
   highlightColor: 0xffffff,
-  midtoneColor: 0xdccbde,
-  lowlightColor: 0x595959,
+  midtoneColor: 0xfddcef,
+  lowlightColor: 0x999999,
   baseColor: 0xffffff,
-  blurFactor: 0.49,
-  speed: 0.90,
-  zoom: 1.40
+  blurFactor: 0.4,
+  speed: 1,
+  zoom: 1.5
 });
 </script>
