--- a/_sass/jekyle/_layout.scss
+++ b/_sass/jekyle/_layout.scss
@@ -332,3 +332,8 @@
 .vanta-canvas {
   position: fixed!important;
 }
+.page {  
+  background: #fdfdfd;
+  padding: 20px;
+  border: 2px solid #eee;
+}
