--- a/_sass/jekyle/_layout.scss
+++ b/_sass/jekyle/_layout.scss
@@ -337,3 +337,17 @@
   padding: 20px;
   border: 2px solid #eee;
 }
+.home {
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: white;
+    z-index: -1;
+    border-radius: 630px;
+    height: 80vmin;
+    width: 80vmin;
+}
