--- a/_layouts/client-work-index.html
+++ b/_layouts/client-work-index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="client-work">
+<div class="page client-work">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
