client work are pages

--- a/_layouts/client-work-single.html
+++ b/_layouts/client-work-single.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="client-work-single">
+<div class="page client-work-single">
   {%- if page.title -%}
     <h1 class="page-heading"><a href="/client-work">Client Work</a> > {{ page.title }}</h1>
   {%- endif -%}
