--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -85,3 +85,27 @@ VANTA.WAVES({
   zoom: 0.65
 })
 </script>
+<!-- <script src="{{ "/assets/vantajs/vanta.net.min.js" | relative_url }}" type="text/javascript"></script>
+<script>
+VANTA.NET({
+  el: "body",
+  color: 0xacacac,
+  backgroundColor: 0xfafafa,
+  points: 7.00,
+  maxDistance: 23.00,
+  spacing: 20.00
+})
+</script> -->
+<!-- <script src="{{ "/assets/vantajs/vanta.birds.min.js" | relative_url }}" type="text/javascript"></script>
+<script>
+VANTA.BIRDS({
+  el: "body",
+  backgroundColor: 0xfdfdfd,
+  color1: 0x87ff,
+  color2: 0x690f54,
+  colorMode: "lerpGradient",
+  separation: 75.00,
+  cohesion: 11.00,
+  quantity: 1.00
+})
+</script> -->
