--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,9 @@ $('header .main-nav a').click(function(){
 olark.identify('7471-379-10-1115');</script>
 <!-- end olark code -->
 <script src="{{ "/assets/vantajs/three.r92.min.js" | relative_url }}" type="text/javascript"></script>
-<!-- <script src="{{ "/assets/vantajs/vanta.fog.min.js" | relative_url }}" type="text/javascript"></script>
+
+{% if page.title == 'Bio & Contact' %}
+<script src="{{ "/assets/vantajs/vanta.fog.min.js" | relative_url }}" type="text/javascript"></script>
 <script>
 VANTA.FOG({
   el: "body",
@@ -73,7 +75,9 @@ VANTA.FOG({
   speed: 1,
   zoom: 1.5
 });
-</script> -->
+</script>
+{% endif %}
+{% if page.title == 'Home' %}
 <script src="{{ "/assets/vantajs/vanta.waves.min.js" | relative_url }}" type="text/javascript"></script>
 <script>
 VANTA.WAVES({
@@ -85,7 +89,9 @@ VANTA.WAVES({
   zoom: 0.65
 })
 </script>
-<!-- <script src="{{ "/assets/vantajs/vanta.net.min.js" | relative_url }}" type="text/javascript"></script>
+{% endif %}
+{% if page.title == 'Services' %}
+<script src="{{ "/assets/vantajs/vanta.net.min.js" | relative_url }}" type="text/javascript"></script>
 <script>
 VANTA.NET({
   el: "body",
@@ -95,8 +101,10 @@ VANTA.NET({
   maxDistance: 23.00,
   spacing: 20.00
 })
-</script> -->
-<!-- <script src="{{ "/assets/vantajs/vanta.birds.min.js" | relative_url }}" type="text/javascript"></script>
+</script>
+{% endif %}
+{% if page.title == 'Client Work' %}
+<script src="{{ "/assets/vantajs/vanta.birds.min.js" | relative_url }}" type="text/javascript"></script>
 <script>
 VANTA.BIRDS({
   el: "body",
@@ -108,4 +116,5 @@ VANTA.BIRDS({
   cohesion: 11.00,
   quantity: 1.00
 })
-</script> -->
+</script>
+{% endif %}
