--- a/_includes/barbajs.html
+++ b/_includes/barbajs.html
@@ -25,7 +25,7 @@ var FadeTransition = Barba.BaseTransition.extend({
      */
     $(this.oldContainer).css({
       position: 'fixed',
-      top: this.oldContainer.offsetTop + this.oldContainer.parentElement.offsetTop + 'px',
+      top: this.oldContainer.offsetTop + 'px',
       left: this.oldContainer.offsetLeft + 'px',
     });
 
