--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,7 +63,7 @@ olark.identify('7471-379-10-1115');</script>
     spacing: 20.00
   })
   </script>
-{% elsif page.title contains 'client' or page.title == 'Bio & Contact' %}
+{% elsif page.permalink contains 'client' or page.title == 'Bio & Contact' %}
   <script src="{{ "/assets/vantajs/vanta.birds.min.js" | relative_url }}" type="text/javascript"></script>
   <script>
   VANTA.BIRDS({
