--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,7 +69,7 @@ olark.identify('7471-379-10-1115');</script>
   VANTA.BIRDS({
     el: "body",
     backgroundColor: 0xfdfdfd,
-    color1: 0x87ff,
+    color1: {%- if page.main_color -%}0x{{ page.main_color | remove: '#' }}{%- else -%}0x87ff{%- endif -%},
     color2: 0x690f54,
     colorMode: "lerpGradient",
     separation: 75.00,
