--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     </div>
 
     <p class="source-org copyright">
-      &copy; {{ site.time | date: "%Y" }} {{ site.title }} | {{ site.footer_copyright_text }} | <a href="/about-this-site/">About this site</a></a></p>
+      &copy; {{ site.time | date: "%Y" }} {{ site.title }} | {{ site.footer_copyright_text }} | <a href="/about-this-site">About this site</a></a></p>
   </div>
 </footer>
 <script src="/assets/js/jquery-3.3.1.js"></script>
