--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@ layout: default
 
   {{ content }}
 
+{% comment %}
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
@@ -25,5 +26,6 @@ layout: default
       {%- endfor -%}
     </ul>
   {%- endif -%}
+{% endcomment %}
 
 </div>
