--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ layout: default
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
       {%- endif -%}</p>
+      {% include read-time.html %}
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
