--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -181,6 +181,7 @@ pre {
  * Wrapper
  */
 .wrapper {
+  width: 100%;
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
   max-width:         calc(#{$content-width} - (#{$spacing-unit}));
   margin-right: auto;
