--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,10 +1,8 @@
-{%- raw -%}
-<span class="reading-time" title="Estimated read time">
+<span class="reading-time" title="Estimated read time">Reading time:  
   {% assign words = content | number_of_words %}
   {% if words < 360 %}
-    1 min
+    1 minute
   {% else %}
-    {{ words | divided_by:180 }} mins
+    {{ words | divided_by:180 }} minutes
   {% endif %}
 </span>
-{%- endraw -%}
