--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,12 +4,7 @@ layout: default
 <div class="page page-{{ page.title | slugify }}">
  
   {%- if page.title -%}
-    <h1 class="page-heading">
-      {% if page.dir != '/' %}
-        <a href="/{{page.dir | remove: '/' }}">{{ page.dir | remove: "/" | capitalize }}</a> >
-      {% endif %}
-      {{ page.title }}
-    </h1>
+    <h1 class="page-heading">{% include breadcrumb.html %} {{ page.title }}</h1>
   {%- endif -%}
  
   {{ content }}
