--- a/_layouts/client-work-single.html
+++ b/_layouts/client-work-single.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="page client-work-single" style="border: 1px solid {{ page.main_color }}">
   {%- if page.title -%}
-    <h1 class="page-heading"><a href="/client-work">Client Work</a> > {{ page.title }}</h1>
+    <h1 class="page-heading"><a href="/client-work/">Client Work</a> > {{ page.title }}</h1>
   {%- endif -%}
 
   {{ content }}
