--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,13 +49,23 @@ $('header .main-nav a').click(function(){
 /* custom configuration goes here (www.olark.com/documentation) */
 olark.identify('7471-379-10-1115');</script>
 <!-- end olark code -->
+
+<!-- background stuff -->
+<div id="bgdiv" style="
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: -999;
+"></div>
 <script src="{{ "/assets/vantajs/three.r92.min.js" | relative_url }}" type="text/javascript"></script>
 
 {% if page.url contains 'services' %}
   <script src="{{ "/assets/vantajs/vanta.net.min.js" | relative_url }}" type="text/javascript"></script>
   <script>
   VANTA.NET({
-    el: "body",
+    el: "#bgdiv",
     color: 0xacacac,
     backgroundColor: 0xfafafa,
     points: 7.00,
@@ -67,7 +77,7 @@ olark.identify('7471-379-10-1115');</script>
   <script src="{{ "/assets/vantajs/vanta.birds.min.js" | relative_url }}" type="text/javascript"></script>
   <script>
   VANTA.BIRDS({
-    el: "body",
+    el: "#bgdiv",
     backgroundColor: 0xfdfdfd,
     color1: {%- if page.main_color -%}0x{{ page.main_color | remove: '#' }}{%- else -%}0x87ff{%- endif -%},
     color2: {%- if page.main_color -%}0x{{ page.main_color | remove: '#' }}{%- else -%}0x690f54{%- endif -%},
@@ -81,7 +91,7 @@ olark.identify('7471-379-10-1115');</script>
   <script src="{{ "/assets/vantajs/vanta.waves.min.js" | relative_url }}" type="text/javascript"></script>
   <script>
   VANTA.WAVES({
-    el: "body",
+    el: "#bgdiv",
     color: 0xc5c5c5,
     shininess: 150.00,
     waveHeight: 10.50,
