--- a/_sass/jekyle/_base.scss
+++ b/_sass/jekyle/_base.scss
@@ -470,16 +470,19 @@ a.button {
   }
 }
 
-.new-websites-splash div {
-  position: relative;
-  max-width: max-content;
-  margin: 0 auto;
-  span {
-    position: absolute;
-    left: 100%;
-  }
-  &:nth-of-type(odd) span {
-    left: auto;
-    right: 100%;
+.new-websites-splash {
+  font-size: 1.3em;
+  div {
+    position: relative;
+    max-width: max-content;
+    margin: 0 auto;
+    span {
+      position: absolute;
+      left: 100%;
+    }
+    &:nth-of-type(odd) span {
+      left: auto;
+      right: 100%;
+    }
   }
 }
