--- a/_sass/jekyle/_layout.scss
+++ b/_sass/jekyle/_layout.scss
@@ -201,6 +201,9 @@
 
 .page-heading {
   @include relative-font-size(2);
+  @media (max-width: 600px) {
+    @include relative-font-size(1.5);
+  }
 }
 
 .post-list-heading {
