--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,4 +28,6 @@
   {%- if jekyll.environment == 'production' and site.google_tag_manager_id -%}
     {%- include google-tag-manager.html -%}
   {%- endif -%}
+
+  {% if page.slug == 'resume' %}<meta name="robots" content="noindex">{% endif %}
 </head>
