--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,5 +30,7 @@
   {%- endif -%}
 
   {% if page.slug == 'resume' %}<meta name="robots" content="noindex">{% endif %}
-  {{ page.slug }}
+  <!-- slug: {{ page.slug }} -->
+  <!-- title: {{ page.title }} -->
+  <!-- url: {{ page.url }} -->
 </head>
