--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
     {%- include google-tag-manager.html -%}
   {%- endif -%}
 
-  {% if page.slug == 'resume' %}<meta name="robots" content="noindex">{% endif %}
+  {% if page.title == 'Resume' %}<meta name="robots" content="noindex">{% endif %}
   <!-- slug: {{ page.slug }} -->
   <!-- title: {{ page.title }} -->
   <!-- url: {{ page.url }} -->
